selection de la box

--- a/game/src/App.css
+++ b/game/src/App.css
@@ -1,9 +1,101 @@
 /* App.css */
+body,
+html {
+  height: 100%;
+  margin: 0;
+  font-family: Arial, Helvetica, sans-serif;
+}
+
+.App {
+  display: flex;
+  flex-direction: row;
+  height: 100%;
+  background-color: #f0f0f0;
+  overflow: hidden;
+}
+
+.lot-list-container {
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  padding: 20px;
+  background-color: #fff;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  overflow-y: auto;
+}
+
+.game-container {
+  flex: 2;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  padding: 20px;
+  background-color: #fff;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  overflow: hidden;
+}
+
 .box-container {
-  width: 150px;
-  height: 150px;
-  display: grid;
-  grid-template-columns: repeat(4, 1fr);
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  max-width: 800px;
+  margin-top: 20px;
+  overflow: hidden;
+}
+
+.selected-box-container {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  max-width: 800px;
+  /* Ajustez la largeur selon vos besoins */
+  margin-top: 20px;
+  overflow: hidden;
+}
+
+.Box {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 100px;
+  height: 100px;
+  background-color: #fff;
+  border: 2px solid #000;
+  cursor: pointer;
+  font-size: 16px;
+  font-weight: bold;
+  text-align: center;
+  margin: 5px;
+  /* Marge entre les boîtes */
+}
+
+.Box.open {
+  background-color: #ddd;
+  cursor: default;
+}
+
+
+.remaining-boxes {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+}
+
+.game-container {
+  display: contents;
+}
+
+.selected-box {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+
 }
 
 .strikethrough {
