--- a/game/src/index.css
+++ b/game/src/index.css
@@ -5,6 +5,10 @@
   text-decoration: none;
 }
 
+img {
+  width: 80%;
+}
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
