--- a/game/src/styles/styles.css
+++ b/game/src/styles/styles.css
@@ -79,7 +79,7 @@
 }
 
 .container-box img {
-    max-width: 100%;
+    width: 70%;
     height: auto;
 }
 
@@ -109,4 +109,19 @@ h1 {
 
 .game-container {
     margin-top: 20px;
+}
+
+.remaining-lots {
+    border: 4px solid grey;
+    padding: 10px;
+}
+
+
+.remaining-lots div {
+    border: 3px solid rgb(108, 22, 22);
+    margin: 10px;
+}
+
+.remaining-lots div ul li {
+    margin: 10px;
 }
